src/python/webapp/app1/app_1_deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app1
  namespace: web-app
spec:
  selector:
    matchLabels:
      app: app1
  replicas: 2
  template:
    metadata:
      labels:
        app: app1
    spec:
      containers:
      - name: app1
        image: arieltar/flaskapp1
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
