src/python/webapp/app1/app_1_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-1-svc
  namespace: web-app
spec:
  selector:
    app: app1
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
