src/python/webapp/app1/app_1_ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app1-ingress
  namespace: web-app
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  defaultBackend:
    service:
      name: app-1-svc
      port:
        number: 5000
  rules:
  - http:
      paths:
      - path: /1
        pathType: Prefix
        backend:
          service:
            name: app-1-svc
            port:
              number: 5000
